# beto

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  TASKS.md  adk.config.json  agent.py  agent_debug.py  code_eval.md  fix_tavily_and_test.py  fix_tavily_tool_registration.py  pyproject.toml  test_crawl4ai_imports.py  test_filesystem.py  test_functiontool.py  test_tavily_import.py  ui.md  voice_agent.py
config/: claude_cli.yaml  claude_cli.yaml.example  context7.yaml.example  crawl4ai.yaml  mcp_proxy.yaml.example  specialized_agents.yaml
docs/: agent-migration-cleanup.md  dual-agent.md  frontend-event-fix.md  implementation_docs_cleanup_plan.md  ux-design.md
examples/: axel_agent_example.py  calendar_agent_example.py  claude_cli_agent.py  claude_cli_shell_example.py  code_execution_test.py  config.yaml.claude-templates  config.yaml.example  crawl4ai_agent_example.py  crawl4ai_manual_deep_crawl_test.py  crawl4ai_staged_example.py  crawl4ai_two_step_test.py  enhanced_memory_example.py  fileserver_agent.py  home_assistant_agent_example.py  home_assistant_domains_example.py  home_assistant_rest_example.py  memory_agent_example.py  search_test.py  shell_cli_agent.py  shell_command_execution.py  specialized_agents_example.py  test_ha_entity.py  todo_agent_example.py  weather_connector_example.py  web_search_agent_example.py  web_search_example.py
memory/: embedding.py  qdrant_memory.py
radbot/: __init__.py  __main__.py  agent.py
raderbot/: __init__.py  __main__.py
scripts/: adapter_tts_test.py  fix_tts_adapter.py  setup_mcp_fileserver.sh  simple_tts_test.py  test_google_cloud_tts.py
task-api/: .env.example  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
tests/: conftest.py
tmp/: agent_transfer_fix_copy.md  agent_transfer_fix_updated.md
tools/: __init__.py  add_axel_to_startup.py  add_generate_content.py  agent_inspection.json  basic_direct_test.py  check_axel.py  check_mcp_env.py  create_calendar_token.py  debug_claude_cli_prompt.py  debug_ha_tools.py  diagnose_search_tool.py  direct_axel_test.py  direct_crawl4ai_test.py  direct_function_tool.py  direct_ha_check.py  direct_token_refresh.py  (+96 more)
(+481 files in other folders)
